<resources>
    <string name="app_name">Plus or Minus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Cream">Whipped Cream</string>
    <string name="Chocolate">Whipped Chocolate</string>
    <string name="QUALITY">QUALITY</string>
    <string name="ORDER">ORDER</string>
    <string name="t">TOPPINGS</string>

</resources>
