<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/NameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name "
        android:inputType="textCapWords"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/t"
        android:textColor="#000000"
        android:textSize="16sp"
        />

    <CheckBox
    android:id="@+id/checkboxS"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:text="@string/Cream"
    android:textColor="#000000"
    android:textSize="16sp"
    />
    <CheckBox
        android:id="@+id/choochlet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/Chocolate"
        android:textColor="#000000"
        android:textSize="16sp"
        android:paddingTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/QUALITY"
        android:textColor="#000000"
        android:textSize="16sp"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="decrement"
            android:text="-"
            android:textSize="16sp"

            />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="30sp"
            />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="increment"
            android:text="+"
            android:textSize="16sp"

            />




    </LinearLayout>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/ORDER"
        android:textSize="16sp"

        />
</LinearLayout>
    </ScrollView>
    <!-- Comment w-->
